# BioEqPy

./: .gitignore  PROJECT_CONTEXT.md  README.md  example_report.html  pyproject.toml
docs/: api_reference.md  design_guide.md  quickstart.md  regulatory_mapping.md  roadmap.md  validation_report.md
examples/: 01_basic_2x2_crossover.py
src/bioeqpy/: __init__.py  analysis.py
src/bioeqpy/anova/: __init__.py  linear_model.py  replicate.py
src/bioeqpy/cli/: main.py
src/bioeqpy/core/: __init__.py  constants.py  exceptions.py  types.py
src/bioeqpy/designs/: __init__.py  crossover_2x2.py  registry.py  replicate_2x2x3.py  replicate_2x2x4.py
src/bioeqpy/diagnostics/: __init__.py  carryover.py  checks.py
src/bioeqpy/io/: __init__.py  loaders.py  validators.py
src/bioeqpy/power/: __init__.py  sample_size.py
src/bioeqpy/reporting/: __init__.py  renderer.py  tables.py
src/bioeqpy/reporting/templates/: be_report.html
src/bioeqpy/tost/: __init__.py  nti.py  rsabe.py  standard.py
tests/: test_analysis.py  test_anova_table.py  test_cli.py  test_io_and_design.py  test_nti_and_carryover.py  test_partial_replicate.py  test_power.py  test_replicate.py  test_rsabe.py  test_validation_reference.py
tests/reference_data/: example_2x2.csv  example_2x2x3.csv  example_2x2x4.csv  validation_grizzle.csv
