[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioeqpy"
version = "0.1.0"
description = "Python toolkit for bioequivalence statistical analysis and regulatory reporting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Priyam Thakar"}]
keywords = ["bioequivalence", "pharmacokinetics", "TOST", "ANOVA", "generic drugs"]
dependencies = [
  "jinja2>=3.1.6",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
reports = ["jinja2>=3.1"]
dev = ["pytest>=8.0"]

[project.scripts]
bioeqpy = "bioeqpy.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

